<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/cv_friend"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/dimen_8dp"
	app:cardCornerRadius="@dimen/dimen_8dp"
	app:cardElevation="@dimen/dimen_8dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/dimen_16dp">

		<TextView
			android:id="@+id/txt_initial"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/initial"
			android:textSize="@dimen/dimen_22sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/txt_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/name" />

		<TextView
			android:id="@+id/txt_major"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/major" />

	</LinearLayout>

</androidx.cardview.widget.CardView>